Stretch tables to full width

--- a/frontend/account_dashboard.html
+++ b/frontend/account_dashboard.html
@@ -45,7 +45,7 @@
         .then(data => {
             tailwindTabulator(document.getElementById('accounts-table'), {
                 data,
-                layout: 'fitData',
+                layout: 'fitDataStretch',
                 columns: [
                     { title: 'Name', field: 'name' },
                     { title: 'Transactions', field: 'transactions', hozAlign: 'right' },
