--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -76,7 +76,7 @@
 
         tailwindTabulator(el, {
             data: data,
-            layout: 'fitData',
+            layout: 'fitDataStretch',
             columns: columns
         });
     }
