--- a/frontend/monthly_dashboard.html
+++ b/frontend/monthly_dashboard.html
@@ -98,7 +98,7 @@
 
         tailwindTabulator(el, {
             data: data,
-            layout: 'fitData',
+            layout: 'fitDataStretch',
             columns: columns
         });
     }
