--- a/frontend/recurring_spend.html
+++ b/frontend/recurring_spend.html
@@ -40,7 +40,7 @@
                 if(data.results && data.results.length){
                     tailwindTabulator(gridEl, {
                         data: data.results,
-                        layout: 'fitData',
+                        layout: 'fitDataStretch',
                         columns: [
                             { title: 'Description', field: 'description' },
                             { title: 'Occurrences', field: 'occurrences', hozAlign: 'right' },
