--- a/frontend/search.html
+++ b/frontend/search.html
@@ -54,7 +54,7 @@
                 if (data.results && data.results.length) {
                     tailwindTabulator(gridEl, {
                         data: data.results,
-                        layout: 'fitData',
+                        layout: 'fitDataStretch',
                         columns: [
                             { title: 'Date', field: 'date' },
                             { title: 'Description', field: 'description', formatter: function(cell){
