--- a/frontend/yearly_dashboard.html
+++ b/frontend/yearly_dashboard.html
@@ -80,7 +80,7 @@
 
         tailwindTabulator(el, {
             data: data,
-            layout: 'fitData',
+            layout: 'fitDataStretch',
             columns: columns
         });
     }
