--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -32,7 +32,7 @@
         .then(data => {
             tailwindTabulator('#logs-grid', {
                 data: data,
-                layout: 'fitData',
+                layout: 'fitDataStretch',
                 columns: [
                     { title: 'Time', field: 'created_at' },
                     { title: 'Level', field: 'level' },
