--- a/frontend/transfers.html
+++ b/frontend/transfers.html
@@ -44,7 +44,7 @@
         .then(data => {
             tailwindTabulator(document.getElementById('transfers-table'), {
                 data: data.transfers,
-                layout: 'fitData',
+                layout: 'fitDataStretch',
                 columns: [
                     { title: 'Date', field: 'date' },
                     { title: 'Description', field: 'description' },
@@ -56,7 +56,7 @@
 
             tailwindTabulator(document.getElementById('ofx-transfers-table'), {
                 data: data.ofx_transfers,
-                layout: 'fitData',
+                layout: 'fitDataStretch',
                 columns: [
                     { title: 'Date', field: 'date' },
                     { title: 'Description', field: 'description' },
