--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -10,8 +10,6 @@
     <title>Manage Categories</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@6.3.0/dist/css/tabulator_simple.min.css">
-
 </head>
 <body class="bg-gray-50 font-sans">
     <div class="flex min-h-screen">
@@ -24,139 +22,12 @@
                 <label class="block">Description<br><textarea id="category-description" class="border p-2 rounded w-full" data-help="Description for the category"></textarea></label>
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Create Category</button>
             </form>
-            <div class="mt-6 bg-white p-4 rounded shadow">
-                <h2 class="text-xl font-semibold mb-2">Existing Categories</h2>
-                <div id="category-table"></div>
-            </div>
+            <div id="category-container" class="mt-6 grid gap-4 md:grid-cols-2 lg:grid-cols-3"></div>
         </main>
     </div>
     <script src="js/menu.js"></script>
     <script src="js/input_help.js"></script>
-    <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
-    <script src="js/tabulator-tailwind.js"></script>
-    <script>
-let categoryTable;
-// Fetch categories and render them with their tags
-async function loadCategories() {
-    const res = await fetch('../php_backend/public/categories.php');
-    const cats = await res.json();
-    const data = cats.map(c => ({id: c.id, name: c.name, description: c.description, tags: c.tags}));
-    if (categoryTable) {
-        categoryTable.setData(data);
-        return;
-    }
-    categoryTable = tailwindTabulator('#category-table', {
-        data: data,
-        layout: 'fitDataStretch',
-        columns: [
-            { title: 'Name', field: 'name', formatter: badgeFormatter('bg-green-200 text-green-800') },
-            { title: 'Description', field: 'description' },
-            { title: 'Tags', field: 'tags', formatter: function(cell){
-                const tags = cell.getValue() || [];
-                const container = document.createElement('div');
-                tags.forEach(t => container.appendChild(createBadge(t.name, 'bg-blue-200 text-blue-800')));
-                return container;
-            } },
-            { title: 'Actions', formatter: function(cell){
-                const c = cell.getRow().getData();
-                const container = document.createElement('div');
-                const editBtn = document.createElement('button');
-                editBtn.textContent = 'Edit';
-                editBtn.className = 'bg-blue-600 text-white px-2 py-1 rounded mr-2';
-                editBtn.addEventListener('click', async () => {
-                    const name = prompt('Category Name', c.name);
-                    if (name === null) return;
-                    const description = prompt('Description', c.description || '');
-                    if (description === null) return;
-                    await fetch('../php_backend/public/categories.php', {
-                        method: 'PUT',
-                        headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({id: c.id, name, description})
-                    });
-                    loadCategories();
-                    showMessage('Category updated');
-                });
-                const tagBtn = document.createElement('button');
-                tagBtn.textContent = 'Assign Tag';
-                tagBtn.className = 'bg-gray-600 text-white px-2 py-1 rounded';
-                tagBtn.addEventListener('click', async () => {
-                    const resTags = await fetch('../php_backend/public/tags.php?unassigned=1');
-                    const allTags = await resTags.json();
-                    if (allTags.length === 0) {
-                        showMessage('No unassigned tags available', 'error');
-                        return;
-                    }
-                    const tagOptions = allTags.map(t => `${t.id}: ${t.name}`).join('\n');
-                    const tagId = prompt('Select Tag:\n' + tagOptions);
-                    if (tagId === null) return;
-                    await fetch('../php_backend/public/categories.php', {
-                        method: 'POST',
-                        headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({action: 'add_tag', category_id: c.id, tag_id: tagId})
-                    });
-                    loadCategories();
-                    showMessage('Tag assigned');
-                });
-
-                const removeTagBtn = document.createElement('button');
-                removeTagBtn.textContent = 'Remove Tag';
-                removeTagBtn.className = 'bg-gray-500 text-white px-2 py-1 rounded ml-2';
-                removeTagBtn.addEventListener('click', async () => {
-                    if (!c.tags || c.tags.length === 0) {
-                        showMessage('No tags assigned', 'error');
-                        return;
-                    }
-                    const tagOptions = c.tags.map(t => `${t.id}: ${t.name}`).join('\n');
-                    const tagId = prompt('Select Tag to remove:\n' + tagOptions);
-                    if (tagId === null) return;
-                    await fetch('../php_backend/public/categories.php', {
-                        method: 'POST',
-                        headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({action: 'remove_tag', category_id: c.id, tag_id: tagId})
-                    });
-                    loadCategories();
-                    showMessage('Tag removed');
-                });
-                const delBtn = document.createElement('button');
-                delBtn.textContent = 'Delete';
-                delBtn.className = 'bg-red-600 text-white px-2 py-1 rounded ml-2';
-                delBtn.addEventListener('click', async () => {
-                    if (!confirm('Delete this category?')) return;
-                    await fetch('../php_backend/public/categories.php', {
-                        method: 'DELETE',
-                        headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({id: c.id})
-                    });
-                    loadCategories();
-                    showMessage('Category deleted');
-                });
-                container.appendChild(editBtn);
-                container.appendChild(tagBtn);
-                container.appendChild(removeTagBtn);
-                container.appendChild(delBtn);
-                return container;
-            }}
-        ]
-    });
-}
-
-document.getElementById('category-form').addEventListener('submit', async e => {
-    e.preventDefault();
-    const name = document.getElementById('category-name').value;
-    const description = document.getElementById('category-description').value;
-    await fetch('../php_backend/public/categories.php', {
-        method: 'POST',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify({name, description})
-    });
-    document.getElementById('category-name').value = '';
-    document.getElementById('category-description').value = '';
-    loadCategories();
-    showMessage('Category created');
-});
-
-loadCategories();
-    </script>
+    <script src="js/category_drag.js"></script>
     <script src="js/overlay.js"></script>
 </body>
 </html>
